--- a/copy_all_url2/popup.html
+++ b/copy_all_url2/popup.html
@@ -1,28 +1,10 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 <style type="text/css">
-body{
-	overflow: hidden;
-	margin: 0px;
-	padding: 0px;
-	background: white;
-}
-div{
-	cursor: pointer;
-	text-align: center;
-	padding: 2px;
-	font-size: 0.9em;
-	width: 120px;
-	margin: 2px;
-	background: #cccccc;
-}
-div:hover{
-	background: #aaaaaa;
-}
-#cache_before_copy_clipboard{
-	position: absolute;
-	top: -9999px;
-}
+
 </style>
 <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
 
@@ -76,7 +58,6 @@ function copyallwindows() {
 }
 
 
-//alert(22);
 //copyallwindows();
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
