--- a/copy_all_url2/options.html
+++ b/copy_all_url2/options.html
@@ -28,6 +28,7 @@ Actual : <span id="actuel"></span>
 <input type="button" value="inputsum" id="inputsum">
 <button onClick="save_options()">Save</button>
 <button onClick="reset_options()">Reset</button>
+<input type="button" value="Clear" id="clear">
 <script type="text/javascript" src="js/options.js"></script>
 </body>
 </html>
