add submit option

--- a/copy_all_url/options.html
+++ b/copy_all_url/options.html
@@ -23,11 +23,11 @@ Actual : <span id="actuel"></span>
 <div class="addoption">
 <input type="button" id="addtextinput" value="Add Option Input">
 <input type="button" id="addarea" value="Add Option Area">
+<input type="button" id="addsubmit" value="Add Submit">
     <div id="options"></div>
 </div>
 <input type="button" value="inputsum" id="inputsum">
 <button onClick="save_options()">Save</button>
-<button onClick="reset_options()">Reset</button>
 <input type="button" value="Clear" id="clear">
 <script type="text/javascript" src="js/options.js"></script>
 </body>
