modify write all (replace \n)

--- a/copy_all_url/options.html
+++ b/copy_all_url/options.html
@@ -24,6 +24,7 @@ Actual : <span id="actuel"></span>
 <input type="button" id="addtextinput" value="Add Option Input">
 <input type="button" id="addarea" value="Add Option Area">
 <input type="button" id="addsubmit" value="Add Submit">
+<input type="button" id="addfocus" value="Add Focus">
     <div id="options"></div>
 </div>
 <input type="button" value="inputsum" id="inputsum">
