focus finished submit

--- a/copy_all_url/options.html
+++ b/copy_all_url/options.html
@@ -22,7 +22,7 @@ Actual : <span id="actuel"></span>
 </div>
 <div class="addoption">
 <input type="button" id="addtextinput" value="Add Option Input">
-<input type="button" id="addarea" value="Add Option Area">
+<!--<input type="button" id="addarea" value="Add Option Area">-->
 <input type="button" id="addsubmit" value="Add Submit">
 <input type="button" id="addfocus" value="Add Focus">
     <div id="options"></div>
