--- a/copy_all_url/popup.html
+++ b/copy_all_url/popup.html
@@ -11,8 +11,8 @@
 	<textarea style="display:'';" id="tempurl"></textarea>
     <input type="button" id="copyUrl" value="Copy">
     <input type="button" id="createUrl" value="Create">
-    <!--<input type="button" id="write" value="Write">-->
-    <input type="button" id="submit" value="Submit">
+<!--    <input type="button" id="write" value="Write">
+    <input type="button" id="submit" value="Submit">-->
     <input type="button" id="writeAllTabs" value="WriteAllTabs" />
 </form>
 <script type="text/javascript" src="js/popup.js"></script>
