add delete button

--- a/copy_all_url/options.html
+++ b/copy_all_url/options.html
@@ -14,18 +14,18 @@
 	If you have any suggestion about this plugin, you can mail me at <a href="mailto:taoanton@gmail.com">taoanton@gmail.com</a>.
 </div>
 
-Actual : <span id="actuel"></span>
+<!--Actual : <span id="actuel"></span>
 <div class="format">
 <h3>Format :</h3>
 <input type="radio" name="format" id="f_text" value="text" /> Text
 <input type="radio" name="format" id="f_html" value="html" checked="checked" /> HTML
-</div>
+</div>-->
 <div class="addoption">
 <input type="button" id="addtextinput" value="Add Option Input">
 <!--<input type="button" id="addarea" value="Add Option Area">-->
 <input type="button" id="addsubmit" value="Add Submit">
 <input type="button" id="addfocus" value="Add Focus">
-    <div id="options"></div>
+    <ul id="options"></ul>
 </div>
 <button onClick="save_options()">Save</button>
 <input type="button" value="Clear" id="clear">
