--- a/copy_all_url/options.html
+++ b/copy_all_url/options.html
@@ -23,6 +23,7 @@
 <div class="addoption">
 <input type="button" id="addtextinput" value="Add Option Input">
 <!--<input type="button" id="addarea" value="Add Option Area">-->
+<input type="button" id="addform" value="Add Form">
 <input type="button" id="addsubmit" value="Add Submit">
 <input type="button" id="addfocus" value="Add Focus">
     <ul id="options"></ul>
